Fix overflow-x and replace parent div with footer in Footer component.  Update tests to match.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,7 +39,7 @@ body {
 }
 
 #footer { /* Temporary positioning */
-  position: absolute;
+  position: fixed;
   width: 100%;
   bottom: 0;
 }
